# onewhat

./: .env.example  .gitignore  COMPETITIVE_EDGE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  DEPLOY_PRIVATE.md  DEPLOY_READY.md  GETTING_STARTED.md  INDEX.md  PROJECT_VISION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  START_HERE.md  VISUAL_GUIDE.md  advanced-technical-analysis.md  competitive-analysis.md  deployment-info.json  minimal_api.py  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  technical-architecture-analysis.md  test_translation.ps1
frontend/: README.md  index.html  index_old.html  netlify.toml  package-lock.json  package.json
frontend/netlify/functions/: health.js  transcribe.js  translate.js
infrastructure/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
scripts/: deploy-complete.ps1  deploy-render.ps1  download_models.py  setup.ps1  test-local.ps1  test_pipeline.py  test_startup.py
src/: __init__.py
src/api/: __init__.py  main.py
src/asr/: __init__.py  whisper_engine.py
src/nmt/: __init__.py  nllb_engine.py
src/orchestration/: __init__.py  pipeline.py
src/tts/: __init__.py  xtts_engine.py
src/utils/: __init__.py  audio.py  config.py  logging.py
