[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onewhat"
version = "0.1.0"
description = "Next-generation real-time speech translation system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OneWhat Team"}
]
keywords = ["translation", "speech", "ai", "real-time", "multilingual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.24.0",
    
    # Speech processing
    "openai-whisper>=20231117",
    "faster-whisper>=0.10.0",  # Optimized Whisper implementation
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.14",
    
    # Translation
    "sacrebleu>=2.3.1",  # BLEU scores
    "unbabel-comet>=2.2.0",  # Quality estimation
    
    # TTS
    "TTS>=0.22.0",  # Coqui TTS
    "pydub>=0.25.1",
    
    # API & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Data & Storage
    "redis>=5.0.1",
    "asyncpg>=0.29.0",  # Async PostgreSQL
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",  # Database migrations
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "structlog>=23.2.0",
    
    # Utilities
    "numpy>=1.26.0",
    "scipy>=1.11.4",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",  # CLI framework
    "rich>=13.7.0",  # Beautiful terminal output
    "tenacity>=8.2.3",  # Retry logic
    "httpx>=0.25.2",  # Async HTTP client
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.1",
    
    # Code quality
    "black>=23.11.0",
    "isort>=5.13.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    
    # Development tools
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.9",
]

gpu = [
    # GPU-specific optimizations
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "triton>=2.1.0",
    "onnxruntime-gpu>=1.16.3",
    "tensorrt>=8.6.1",
]

cloud = [
    # Cloud provider SDKs
    "boto3>=1.34.0",  # AWS
    "azure-storage-blob>=12.19.0",  # Azure
    "google-cloud-storage>=2.14.0",  # GCP
]

[project.urls]
Homepage = "https://github.com/onewhat/onewhat"
Documentation = "https://onewhat.readthedocs.io"
Repository = "https://github.com/onewhat/onewhat"
Issues = "https://github.com/onewhat/onewhat/issues"

[project.scripts]
onewhat = "onewhat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onewhat = ["py.typed", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | models
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["onewhat"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "TTS.*",
    "librosa.*",
    "soundfile.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
